platform_versioned_docs/version-4.5.0/administer/connector/database.mdx
---
title: Database Connector
sidebar_label: Database
sidebar_position: 1
description: Learn how to use Database Connectors with the platform to manage backing stores for multiple virtual clusters.
---

import BasePrerequisites from '../../_partials/install/base-prerequisites.mdx';

import InstallNextSteps from '../../_partials/install/install-next-steps.mdx';

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Icon from '@site/src/components/Icon'
import VersionBadge from '@site/src/components/VersionBadge';

<VersionBadge platformVersion="v4.1.0" vclusterVersion="v0.21.0"/>

The database connector feature allows an admin to configure a database server to manage backing stores for multiple virtual clusters. For each virtual cluster, the feature automatically creates an independent database and non-privileged user. Read more about the use of external databases in the [External Database documentation](/docs/vcluster/configure/vcluster-yaml/control-plane/components/backing-store/database/external).

## Compatibility matrix

The database connector works with PostgreSQL and MySQL compatible DBMS. While especially the managed database offerings
from hyperscalers sometimes do not expose full admin privileges, ship with a non-default feature set, or use special
configuration, it is not possible to guarantee compatibility with all of them.
The following table outlines the current support status:

<table>
  <thead>
  <tr>
    <th>Database type</th>
    <th>Environment</th>
    <th>Supported</th>
    <th>Tested versions</th>
  </tr>
  </thead>
  <tbody>
  <tr>
    <td rowspan="5">PostgreSQL</td>
    <td>Self-hosted / upstream</td>
    <td>v14&nbsp;&nbsp;<Icon type="check" /><br/>v15+<Icon type="cross" /></td>
    <td>v14, v15, v16, v17, v18</td>
  </tr>
  <tr>
    <td>AWS Aurora PostgreSQL</td>
    <td>v14&nbsp;&nbsp;<Icon type="check" /><br/>v15+<Icon type="cross" /></td>
    <td>v14, v15, v16, v17</td>
  </tr>
  <tr>
    <td>AWS RDS PostgreSQL</td>
    <td>v14&nbsp;&nbsp;<Icon type="check" /><br/>v15+<Icon type="cross" /></td>
    <td>v14, v15, v16, v17, v18</td>
  </tr>
  <tr>
    <td>Azure Database for PostgreSQL flexible server</td>
    <td>v14&nbsp;&nbsp;<Icon type="check" /><br/>v15+<Icon type="cross" /></td>
    <td>v14, v15, v16, v17, v18</td>
  </tr>
  <tr>
    <td>Google Cloud SQL PostgreSQL</td>
    <td><Icon type="cross" /></td>
    <td>v14, v15, v16, v17, v18</td>
  </tr>
  <tr>
    <td rowspan="5">MySQL</td>
    <td>Self-hosted / upstream</td>
    <td><Icon type="check" /></td>
    <td>v5, v8, v9</td>
  </tr>
  <tr>
    <td>AWS Aurora MySQL</td>
    <td><Icon type="check" /></td>
    <td>v5, v8, v9</td>
  </tr>
  <tr>
    <td>AWS RDS MySQL</td>
    <td><Icon type="check" /></td>
    <td>v5, v8, v9</td>
  </tr>
  <tr>
    <td>Azure Database for MySQL flexible server</td>
    <td><Icon type="warning" title="Needs explicit configuration to allow unencrypted transport" />️<sup>1</sup></td>
    <td>v5, v8, v9</td>
  </tr>
  <tr>
    <td>Google Cloud SQL MySQL</td>
    <td><Icon type="check" /></td>
    <td>v5, v8, v9</td>
  </tr>
  <tr>
    <td>MariaDB</td>
    <td>AWS RDS MariaDB</td>
    <td>v10 <Icon type="check" /><br/>v11 <Icon type="warning" title="Needs explicit configuration to allow unencrypted transport" />️<sup>1</sup></td>
    <td>v10, v11</td>
  </tr>
  </tbody>
</table>

<sup>1</sup> Needs explicit configuration to allow unencrypted transport: `require_secure_transport` set to `OFF`. <br/>

:::info
While other, not mentioned, PostgreSQL/MySQL compatible databases may work, they have not been tested.
:::

### How cloud database offerings are tested

The following sections describe how each hyperscaler database offering is tested, including any notable deviations from a default deployment.

<details>
  <summary>AWS</summary>
  <Tabs>
    <TabItem value="aurora-postgresql" label="Aurora PostgreSQL">
      Tested with major versions **v14, v15, v16, and v17**.

      - **Instance class:** `db.t3.medium`
      - **High availability:** Single-instance Aurora cluster (no read replicas)
    </TabItem>
    <TabItem value="aurora-mysql" label="Aurora MySQL">
      Tested with major versions **v5, v8, and v9**.

      - **Instance class:** `db.t3.medium`
      - **High availability:** Single-instance Aurora cluster (no read replicas)
    </TabItem>
    <TabItem value="rds-postgresql" label="RDS PostgreSQL">
      Tested with major versions **v14, v15, v16, v17, and v18**.

      - **Instance class:** `db.t3.micro`
      - **Storage:** 20 GB (General Purpose SSD)
      - **High availability:** No, Single-AZ
    </TabItem>
    <TabItem value="rds-mysql" label="RDS MySQL">
      Tested with major versions **v5, v8, and v9**.

      - **Instance class:** `db.t3.micro`
      - **Storage:** 20 GB (General Purpose SSD)
      - **High availability:** No, Single-AZ
    </TabItem>
    <TabItem value="rds-mariadb" label="RDS MariaDB">
      Tested with major versions **v10 and v11**.

      - **Instance class:** `db.t3.micro`
      - **Storage:** 20 GB (General Purpose SSD)
      - **High availability:** No, Single-AZ
      - **Secure transport:** For MariaDB **v11+**, `require_secure_transport` is enabled by default. A custom DB parameter group is used to set `require_secure_transport=OFF` (**deviation from default**). For **v10**, no changes are needed.
    </TabItem>
  </Tabs>
</details>

<details>
  <summary>Azure</summary>
  <Tabs>
    <TabItem value="azure-postgresql" label="Azure Database for PostgreSQL flexible server">
      Tested with major versions **v14, v15, v16, v17, and v18**.

      - **SKU / tier:** Burstable, `Standard_B1ms`
      - **High availability:** No (single server)
    </TabItem>
    <TabItem value="azure-mysql" label="Azure Database for MySQL flexible server">
      Tested with major versions **v5, v8, and v9**.

      - **SKU / tier:** Burstable, `Standard_B1ms`
      - **High availability:** No (single server)
      - **Secure transport:** `require_secure_transport` set to `OFF` (**deviation from default**).
    </TabItem>
  </Tabs>
</details>

<details>
  <summary>GCP</summary>
  <Tabs>
    <TabItem value="gcp-postgresql" label="Google Cloud SQL PostgreSQL">
      Not supported as Google Cloud SQL PostgreSQL does not expose a user with full admin privileges and thus, altering
      database owners is not supported.
    </TabItem>
    <TabItem value="gcp-mysql" label="Google Cloud SQL MySQL">
      Tested with major versions **v5, v8, and v9**.

      - **Edition / tier:** Enterprise, `db-f1-micro`
      - **High availability:** No (single-zone)
      - **User setup:** A dedicated database user is created with a `%` host wildcard to allow connections from any host.
    </TabItem>
  </Tabs>
</details>

## Prerequisites

<BasePrerequisites />

- A running PostgreSQL or MySQL compatible DBMS and admin credentials to the server

## Configuration

### Create platform admin connector secret

A connector secret is a secret that can be used with a platform feature or integration.

For the platform to start using a database server, a secret must be created that contains admin credentials for the server. The secret must:
- Contain the `loft.sh/connector-type` label with the `shared-database` value
- Reside in the same namespace as the platform
- Contain the fields:
  - endpoint
  - password
  - port
  - user

To create a database connector secret in the UI, navigate to the sidebar and select **Databases** -> **Connect Database Secrets**.

<!-- vale off -->
Alternatively, a Secret YAML manifest can be applied to the platform's host cluster.
<!-- vale on -->

```yaml title="Shared database secret template"
apiVersion: v1
kind: Secret
metadata:
  name: <name> # this is a normal metadata name. A descriptive name is recommended. This will be used in a tenet vCluster's config to reference the connector secret
  namespace: <vcluster-platform-namespace> # this is the namespace that vCluster Platform is installed in. "vcluster-platform" and "loft" are common values.
  labels:
    loft.sh/connector-type: "shared-database"
stringData:
  endpoint: <endpoint> # this could be a service endoint or an external hostname endpoint
  password: <password>
  port: <port> # 3306 is a common port for database servers
  user: <user>
```

Use the following `kubectl` command to create the secret:

```bash title="Create a shared database connector secret"
kubectl create secret generic default-secret-name \
  --namespace=vcluster-platform \
  --from-literal=endpoint="your-database-endpoint" \
  --from-literal=password="your-database-password" \
  --from-literal=port="3306" \
  --from-literal=user="your-database-user" \
  -o yaml --dry-run=client > secret.yaml
```

## Use virtual cluster with shared database

A new virtual cluster can now reference the created connector secret by setting the `controlPlane.backingStore.database.external.connector` field in the virtual cluster config to the `name` of the connector secret.

:::warning
Modifying a database secret to point to a different database server is not recommended and may lead to data loss.
:::

### Example configuration

The following example shows a connector secret for the shared database feature. It connects to an internal MySQL instance exposed by a service named `mysql` in the `vcluster-platform` namespace (where the platform is assumed to be installed). You can also use any other MySQL-compatible endpoint, such as an AWS RDS instance.

```yaml title="Shared database secret example"
apiVersion: v1
kind: Secret
metadata:
  name: default-data-source
  namespace: vcluster-platform # This must match the namespace that vCluster Platform is in.
  labels:
    loft.sh/connector-type: "shared-database"
stringData:
  endpoint: mysql.vcluster-platform # This service can be in any namespace.
  password: <password>
  port: "3306"
  user: root
  type: mysql # This can be mysql or postgres. If left blank, the mysql database type is assumed.
```
