platform_versioned_docs/version-4.9.0/administer/connector/database.mdx
---
title: Database Connector
sidebar_label: Database
sidebar_position: 1
description: Learn how to use Database Connectors with the platform to manage backing stores for multiple tenant clusters.
---

import BasePrerequisites from '../../_partials/install/base-prerequisites.mdx';

import InstallNextSteps from '../../_partials/install/install-next-steps.mdx';

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Icon from '@site/src/components/Icon'
import VersionBadge from '@site/src/components/VersionBadge';
import FeatureTable from '@site/src/components/FeatureTable';
import Flow, { Step } from '@site/src/components/Flow'


<FeatureTable names="connector-external-database,connector-external-database-eks-pod-identity" />


<VersionBadge platformVersion="v4.1.0" vclusterVersion="v0.21.0"/>

The database connector feature allows an admin to configure a database server to manage backing stores for multiple tenant clusters. For each tenant cluster, the feature automatically creates an independent database and non-privileged user. Read more about the use of external databases in the [External Database documentation](/docs/vcluster/configure/vcluster-yaml/control-plane/components/backing-store/database/external).

## Compatibility matrix

The database connector works with PostgreSQL and MySQL compatible DBMS. While especially the managed database offerings
from hyperscalers sometimes do not expose full admin privileges, ship with a non-default feature set, or use special
configuration, it is not possible to guarantee compatibility with all of them.
The following table outlines the current support status:

<table>
  <thead>
  <tr>
    <th>Database type</th>
    <th>Environment</th>
    <th>Supported</th>
    <th>Tested versions</th>
  </tr>
  </thead>
  <tbody>
  <tr>
    <td rowspan="5">PostgreSQL</td>
    <td>Self-hosted / upstream</td>
    <td><Icon type="check" /></td>
    <td>v14, v15, v16, v17, v18</td>
  </tr>
  <tr>
    <td>AWS Aurora PostgreSQL</td>
    <td><Icon type="check" /></td>
    <td>v14, v15, v16, v17</td>
  </tr>
  <tr>
    <td>AWS RDS PostgreSQL</td>
    <td><Icon type="check" /></td>
    <td>v14, v15, v16, v17, v18</td>
  </tr>
  <tr>
    <td>Azure Database for PostgreSQL flexible server</td>
    <td><Icon type="check" /></td>
    <td>v14, v15, v16, v17, v18</td>
  </tr>
  <tr>
    <td>Google Cloud SQL PostgreSQL</td>
    <td><Icon type="check" /></td>
    <td>v14, v15, v16, v17, v18</td>
  </tr>
  <tr>
    <td rowspan="5">MySQL</td>
    <td>Self-hosted / upstream</td>
    <td><Icon type="check" /></td>
    <td>v5, v8, v9</td>
  </tr>
  <tr>
    <td>AWS Aurora MySQL</td>
    <td><Icon type="check" /></td>
    <td>v5, v8, v9</td>
  </tr>
  <tr>
    <td>AWS RDS MySQL</td>
    <td><Icon type="check" /></td>
    <td>v5, v8, v9</td>
  </tr>
  <tr>
    <td>Azure Database for MySQL flexible server</td>
    <td><Icon type="warning" title="Needs explicit configuration to allow unencrypted transport" />️<sup>1</sup></td>
    <td>v5, v8, v9</td>
  </tr>
  <tr>
    <td>Google Cloud SQL MySQL</td>
    <td><Icon type="check" /></td>
    <td>v5, v8, v9</td>
  </tr>
  <tr>
    <td>MariaDB</td>
    <td>AWS RDS MariaDB</td>
    <td>v10 <Icon type="check" /><br/>v11 <Icon type="warning" title="Needs explicit configuration to allow unencrypted transport" />️<sup>1</sup></td>
    <td>v10, v11</td>
  </tr>
  </tbody>
</table>

<sup>1</sup> Needs explicit configuration to allow unencrypted transport: `require_secure_transport` set to `OFF`. <br/>

:::info
While other, not mentioned, PostgreSQL/MySQL compatible databases may work, they have not been tested.
:::

### How cloud database offerings are tested

The following sections describe how each hyperscaler database offering is tested, including any notable deviations from a default deployment.

<details>
  <summary>AWS</summary>
  <Tabs>
    <TabItem value="aurora-postgresql" label="Aurora PostgreSQL">
      Tested with major versions **v14, v15, v16, and v17**.

      - **Instance class:** `db.t3.medium`
      - **High availability:** Single-instance Aurora cluster (no read replicas)
    </TabItem>
    <TabItem value="aurora-mysql" label="Aurora MySQL">
      Tested with major versions **v5, v8, and v9**.

      - **Instance class:** `db.t3.medium`
      - **High availability:** Single-instance Aurora cluster (no read replicas)
    </TabItem>
    <TabItem value="rds-postgresql" label="RDS PostgreSQL">
      Tested with major versions **v14, v15, v16, v17, and v18**.

      - **Instance class:** `db.t3.micro`
      - **Storage:** 20 GB (General Purpose SSD)
      - **High availability:** No, Single-AZ
    </TabItem>
    <TabItem value="rds-mysql" label="RDS MySQL">
      Tested with major versions **v5, v8, and v9**.

      - **Instance class:** `db.t3.micro`
      - **Storage:** 20 GB (General Purpose SSD)
      - **High availability:** No, Single-AZ
    </TabItem>
    <TabItem value="rds-mariadb" label="RDS MariaDB">
      Tested with major versions **v10 and v11**.

      - **Instance class:** `db.t3.micro`
      - **Storage:** 20 GB (General Purpose SSD)
      - **High availability:** No, Single-AZ
      - **Secure transport:** For MariaDB **v11+**, `require_secure_transport` is enabled by default. A custom DB parameter group is used to set `require_secure_transport=OFF` (**deviation from default**). For **v10**, no changes are needed.
    </TabItem>
  </Tabs>
</details>

<details>
  <summary>Azure</summary>
  <Tabs>
    <TabItem value="azure-postgresql" label="Azure Database for PostgreSQL flexible server">
      Tested with major versions **v14, v15, v16, v17, and v18**.

      - **SKU / tier:** Burstable, `Standard_B1ms`
      - **High availability:** No (single server)
    </TabItem>
    <TabItem value="azure-mysql" label="Azure Database for MySQL flexible server">
      Tested with major versions **v5, v8, and v9**.

      - **SKU / tier:** Burstable, `Standard_B1ms`
      - **High availability:** No (single server)
      - **Secure transport:** `require_secure_transport` set to `OFF` (**deviation from default**).
    </TabItem>
  </Tabs>
</details>

<details>
  <summary>GCP</summary>
  <Tabs>
    <TabItem value="gcp-postgresql" label="Google Cloud SQL PostgreSQL">
      Tested with major versions **v14, v15, v16, v17, and v18**. Google Cloud SQL PostgreSQL requires vCluster Platform v4.7 or later for all versions.

      - **Edition / tier:** Enterprise, `db-f1-micro`
      - **High availability:** No (single-zone)
      - **User setup:** A dedicated database user is created because Cloud SQL does not expose the `postgres` superuser with full privileges.
    </TabItem>
    <TabItem value="gcp-mysql" label="Google Cloud SQL MySQL">
      Tested with major versions **v5, v8, and v9**.

      - **Edition / tier:** Enterprise, `db-f1-micro`
      - **High availability:** No (single-zone)
      - **User setup:** A dedicated database user is created with a `%` host wildcard to allow connections from any host.
    </TabItem>
  </Tabs>
</details>

## Prerequisites

<BasePrerequisites />

- A running PostgreSQL or MySQL compatible DBMS and admin credentials to the server

## Configuration

### Create platform admin connector secret

A connector secret is a secret that can be used with a platform feature or integration.

For the platform to start using a database server, a secret must be created that contains admin credentials for the server. The secret must:
- Contain the `loft.sh/connector-type` label with the `shared-database` value
- Reside in the same namespace as the platform
- Contain the fields:
  - endpoint
  - password
  - port
  - user

To create a database connector secret in the UI, navigate to the sidebar and select **Databases** -> **Connect Database Secrets**.

<!-- vale off -->
Alternatively, a Secret YAML manifest can be applied to the platform's control plane cluster.
<!-- vale on -->

```yaml title="Shared database secret template"
apiVersion: v1
kind: Secret
metadata:
  name: <name> # this is a normal metadata name. A descriptive name is recommended. This will be used in a tenet vCluster's config to reference the connector secret
  namespace: <vcluster-platform-namespace> # this is the namespace that vCluster Platform is installed in. "vcluster-platform" and "loft" are common values.
  labels:
    loft.sh/connector-type: "shared-database"
stringData:
  endpoint: <endpoint> # this could be a service endoint or an external hostname endpoint
  password: <password>
  port: <port> # 3306 is a common port for database servers
  user: <user>
```

Use the following `kubectl` command to create the secret:

```bash title="Create a shared database connector secret"
kubectl create secret generic default-secret-name \
  --namespace=vcluster-platform \
  --from-literal=endpoint="your-database-endpoint" \
  --from-literal=password="your-database-password" \
  --from-literal=port="3306" \
  --from-literal=user="your-database-user" \
  -o yaml --dry-run=client > secret.yaml
```

## Use tenant cluster with shared database

A new tenant cluster can now reference the created connector secret by setting the `controlPlane.backingStore.database.external.connector` field in the tenant cluster config to the `name` of the connector secret.

:::warning
Modifying a database secret to point to a different database server is not recommended and may lead to data loss.
:::

### Example configuration

The following example shows a connector secret for the shared database feature. It connects to an internal MySQL instance exposed by a service named `mysql` in the `vcluster-platform` namespace (where the platform is assumed to be installed). You can also use any other MySQL-compatible endpoint, such as an AWS RDS instance.

```yaml title="Shared database secret example"
apiVersion: v1
kind: Secret
metadata:
  name: default-data-source
  namespace: vcluster-platform # This must match the namespace that vCluster Platform is in.
  labels:
    loft.sh/connector-type: "shared-database"
stringData:
  endpoint: mysql.vcluster-platform # This service can be in any namespace.
  password: <password>
  port: "3306"
  user: root
  type: mysql # This can be mysql or postgres. If left blank, the mysql database type is assumed.
```

## PostgreSQL TLS

<VersionBadge platformVersion="v4.9.2"/>

Starting with platform v4.9.2, the PostgreSQL admin connection uses `sslmode=require` as the minimum. Previously the connection silently fell back to plaintext when the server refused TLS. Two optional fields on the connector secret tune this behavior:

| Field | Effect |
|---|---|
| `caCert` | PEM-encoded CA bundle. When set, the connection uses `sslmode=verify-full` and the server certificate is validated against this CA. |
| `sslMode` | Explicit override (`disable`, `require`, `verify-full`, and so on). Wins over the default derived from `caCert`. Set `sslMode: disable` to keep an internal-network PostgreSQL without TLS working after upgrading to v4.9.2. |

The example below enables `sslmode=verify-full` by attaching the CA bundle that signed the PostgreSQL server certificate:

```yaml title="Connector secret with TLS verification"
apiVersion: v1
kind: Secret
metadata:
  name: postgres-tls
  namespace: vcluster-platform
  labels:
    loft.sh/connector-type: "shared-database"
stringData:
  endpoint: postgres.internal.svc.cluster.local
  port: "5432"
  user: admin
  password: <password>
  type: postgres
  caCert: |
    -----BEGIN CERTIFICATE-----
    <CA certificate that signed the PostgreSQL server certificate>
    -----END CERTIFICATE-----
```

## Recreate / restore tenant clusters

To accommodate infrastructure updates or disaster recovery needs, follow this process to restore tenant clusters using a **database connector** powered backing store.

<!-- vale Vale.Terms = NO -->
<Flow>
  <Step>Annotate the target VirtualClusterInstance with `vcluster.com/database-reclaim-policy: retain` so deleting the tenant cluster does not also delete the database.</Step>
  <Step>Record the value of the `vcluster.com/database-uid` annotation and save the `spec` from the VirtualClusterInstance.</Step>
  <Step>Delete the tenant cluster.</Step>
  <Step>Create the tenant cluster with the same `vcluster.com/database-uid` annotation and the saved `spec`.</Step>
</Flow>
<!-- vale Vale.Terms = YES -->

:::important Scope
This procedure only restores the backing store connection. Depending on your configuration, resources such as persistent volumes or other external dependencies might not be available for the recreated tenant cluster.
:::

:::important RBAC permissions
Creating VirtualClusterInstance resources with the `vcluster.com/database-uid` annotation set requires elevated permissions.

```yaml title="Sample ClusterRole"
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: vcluster-database-admin
rules:
   - apiGroups: [ "management.loft.sh" ]
     resources: [ "virtualclusterinstances/externaldatabase" ]
     verbs: [ "bind" ]
```
:::

### Sample bulk migration script

:::important
This script assumes that every matched tenant cluster uses a database connector.

If a matched tenant cluster does not use a database connector, its data is not preserved.
:::

```sh title="Sample control plane host bulk migration script"
# requires kubectl, jq, and access to the vCluster Platform api

OLD_CLUSTER="old-cluster"
NEW_CLUSTER="new-cluster"

# select required instances running on old cluster
kubectl get virtualclusterinstance.management.loft.sh -A -o json | jq --arg c "$OLD_CLUSTER" '.items=[.items[] | select(.spec.clusterRef.cluster==$c)]' > ./old-vcis.json

# annotate with retain
kubectl annotate -f ./old-vcis.json vcluster.com/database-reclaim-policy=retain --overwrite

# prepare new vcis specs by setting the desired cluster and remove metadata and status fields
cat ./old-vcis.json | jq --arg c "$NEW_CLUSTER" '.items=[.items[] | .spec.clusterRef.cluster=$c | del(.metadata.resourceVersion, .metadata.uid, .metadata.creationTimestamp, .metadata.generation, .status)]' > ./new-vcis.json

# delete old VCIs
kubectl delete -f ./old-vcis.json --wait

# create new VCIs
kubectl create -f ./new-vcis.json

# wait for the new VCIs to be ready
kubectl wait -f ./new-vcis.json --for=condition=Ready
```
